Finised Inferno, removed a lot of nodes but left css in case of implementation in the future. Only Mirage left.

--- a/src/inferno.html
+++ b/src/inferno.html
@@ -14,82 +14,46 @@
         </span>
 
         <img src="images/CS2_inferno_radar.png" class="map" id="map">
-        <a id="coffin" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="coffin" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/Zfsh5mt2Vj8">
             <img src="images/dot.png">
         </a>
-        <a id="garden" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="car" title="Car Smoke" class="node" data-url="https://www.youtube.com/embed/y2vLa8G26tc">
             <img src="images/dot.png">
         </a>
-        <a id="dark" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="ct" title="CT Smoke" class="node" data-url="https://www.youtube.com/embed/uqHJtqy9FXY">
             <img src="images/dot.png">
         </a>
-        <a id="grill" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="tramp" title="Tramp Smoke" class="node" data-url="https://www.youtube.com/embed/VuHVjfeiIJk">
             <img src="images/dot.png">
         </a>
-        <a id="fountain" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="bottommid" title="Bottom Mid Smoke" class="node" data-url="https://www.youtube.com/embed/CA19asR8x-c">
             <img src="images/dot.png">
         </a>
-        <a id="quad" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="along" title="Arch Smoke" class="node" data-url="https://www.youtube.com/embed/I6sJ9oJAWME">
             <img src="images/dot.png">
         </a>
-        <a id="first" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="topmid" title="Top Mid Smoke" class="node" data-url="https://www.youtube.com/embed/zKYCnaxjsCI">
             <img src="images/dot.png">
         </a>
-        <a id="second" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="ashort" title="A Short Smoke" class="node" data-url="https://www.youtube.com/embed/xc06C2QdfSw">
             <img src="images/dot.png">
         </a>
-        <a id="car" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="cemetary" title="Cemetery Smoke" class="node" data-url="https://www.youtube.com/embed/23D_LY6HyJc">
             <img src="images/dot.png">
         </a>
-        <a id="banana" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="backsitea" title="Moto A Smoke" class="node" data-url="https://www.youtube.com/embed/L_D4QJ-ugw4">
             <img src="images/dot.png">
         </a>
-        <a id="ct" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="pit" title="Pit Smoke" class="node" data-url="https://www.youtube.com/embed/m0eEj6OXnOg">
             <img src="images/dot.png">
         </a>
-        <a id="tramp" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="balcony" title="A Short Smoke" class="node" data-url="https://www.youtube.com/embed/6_3FaOnu2OE">
             <img src="images/dot.png">
         </a>
-        <a id="bottommid" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="library" title="Library Smoke" class="node" data-url="https://www.youtube.com/embed/WoY2uKYQDPk">
             <img src="images/dot.png">
         </a>
-        <a id="secondmid" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="along" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="close" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="topmid" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="ashort" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="graveyard" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="cemetary" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="backsitea" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="window" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="pit" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="balcony" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="library" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png">
-        </a>
-        <a id="arch" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="arch" title="Arch Smoke" class="node" data-url="https://www.youtube.com/embed/o-bKyskbUiQ">
             <img src="images/dot.png">
         </a>
     </div>
