Last map (mirage) done. Still have to fix dust 2 bug.

--- a/src/mirage.html
+++ b/src/mirage.html
@@ -1,75 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSnadesv1</title>
-<link rel="stylesheet" href="app.css">
-<link rel="stylesheet" href="mirage.css">
+    <title>CSnadesv1</title>
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="mirage.css">
 </head>
 <body>
-    <script id="replace_with_navbar" src="nav.js"></script> <!--NAVBARRRR :)-->
+    <script id="replace_with_navbar" src="nav.js"></script>
 
-    <div class="map-container" >
-
+    <div class="map-container">
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Mirage</h1>
         </span>
 
         <img src="images/image (2).png" class="map" id="map">
-        <a id="cat" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        
+        <a id="cat" title="Cat Smoke" class="node" data-url="https://www.youtube.com/embed/TrBYEo_UEj4">
             <img src="images/dot.png">
         </a>
-        <a id="window" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="window" title="Window Smoke" class="node" data-url="https://www.youtube.com/embed/B08gR3VAokw">
             <img src="images/dot.png">
         </a>
-        <a id="con" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="con" title="Con Smoke" class="node" data-url="https://www.youtube.com/embed/xL1Oc_Q1ntE">
             <img src="images/dot.png">
         </a>
-        <a id="apps" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="van" title="Van Smoke" class="node" data-url="https://www.youtube.com/embed/c4oUimLykgE">
             <img src="images/dot.png">
         </a>
-        <a id="van" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="bench" title="Bench-van Smoke" class="node" data-url="https://www.youtube.com/embed/ykrYdTm313Y">
             <img src="images/dot.png">
         </a>
-        <a id="bench" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="benchdeep" title="Bench Smoke" class="node" data-url="https://www.youtube.com/embed/KxrGXAEc8og">
             <img src="images/dot.png">
         </a>
-        <a id="CT" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="CT" title="CT Smoke" class="node" data-url="https://www.youtube.com/embed/95GWO9V3EjI">
             <img src="images/dot.png">
         </a>
-        <a id="stairs" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="stairs" title="Stairs Smoke" class="node" data-url="https://www.youtube.com/embed/M2yZGLl4bZw">
             <img src="images/dot.png">
         </a>
-        <a id="jungle" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="jungle" title="Jungle Smoke" class="node" data-url="https://www.youtube.com/embed/djzqciBCh-0">
             <img src="images/dot.png">
         </a>
-        <a id="marketWindow" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="jungle2" title="2nd Jungle Smoke" class="node" data-url="https://www.youtube.com/embed/TTYZiNg7U_k">
             <img src="images/dot.png">
         </a>
-        <a id="marketDoor" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="marketWindow" title="Market Window Smoke" class="node" data-url="https://www.youtube.com/embed/8PwZG3CwD5g">
             <img src="images/dot.png">
         </a>
-        <a id="topmidtop" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="marketDoor" title="Market Door Smoke" class="node" data-url="https://www.youtube.com/embed/IBLBaXIL0LI">
             <img src="images/dot.png">
         </a>
-        <a id="underpass" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="topmidtop" title="Top Mid Smoke" class="node" data-url="https://www.youtube.com/embed/4Sqt3wjwAdo">
             <img src="images/dot.png">
         </a>
-        <a id="getleft" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="topmidd" title="Top Mid from CT Smoke" class="node" data-url="https://www.youtube.com/embed/Hl1tmQXLMf4">
             <img src="images/dot.png">
         </a>
-        <a id="getright" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="underpass" title="Underpass Smoke" class="node" data-url="https://www.youtube.com/embed/RN1gxrnI9OI">
             <img src="images/dot.png">
         </a>
-        <a id="appsDeep" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="getleft" title="Get-Left Smoke" class="node" data-url="https://www.youtube.com/embed/a4vLzhBUboY">
             <img src="images/dot.png">
         </a>
-        <a id="topmidbottom" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="getright" title="Get-Right Smoke" class="node" data-url="https://www.youtube.com/embed/a4vLzhBUboY">
             <img src="images/dot.png">
         </a>
-        <a id="midcon" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="appsDeep" title="Apps Deep Smoke" class="node" data-url="https://www.youtube.com/embed/stJ0w0kr4ro">
+            <img src="images/dot.png">
+        </a>
+        <a id="midcon" title="Con Smoke" class="node" data-url="https://www.youtube.com/embed/4njj8Q08NUk">
             <img src="images/dot.png">
         </a>
     </div>
+
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
     <script id="replace_with_videoPlayer" src="vP.js"></script> 
