I believe im done, im gonna cry..

--- a/src/dust2.html
+++ b/src/dust2.html
@@ -26,7 +26,7 @@
         <a id="a-cross" class="node" title="A Cross Smoke" data-url="https://www.youtube.com/embed/dI_5mTnSgsI" target="_blank">
             <img src="images/dot.png" alt="Node 1">
         </a>
-        <a id="b-window" class="node" title="B Window Smoke" data-url="https://www.youtube.com/embed/N-nTbdDAhdo" target="_blank">
+        <a id="b-window" class="node" title="B Window Smoke" data-url="https://www.youtube.com/embed/Sd4ia4zZ9YE" target="_blank">
             <img src="images/dot.png" alt="Node 1">
         </a>
         <a id="ct-a" class="node" title="A CT Smoke" data-url="https://www.youtube.com/embed/zcHhcvhntXU" target="_blank">
@@ -60,5 +60,6 @@
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
     <script id="replace_with_videoPlayer" src="vP.js"></script> 
+    <script src="mobileDetector.js"></script> 
 </body>
 </html>
