--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,19 @@
     <head>
     <title>Home</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <script id="replace_with_navbar" src="nav.js"></script> 
-
+        <div id="container">
+            <a id="smiley"><img src="images/smiley.png"></a>
+            <p style="color:white; font-size: xx-large; text-align:center;">Hello, welcome to my website!<br> <br>This project was built during the summer of 2024, 
+                as a fun way to showcase my HTML, CSS, and JS skills. I've always loved CS:GO, and recently 
+                the new and improved CS2. So I took the time to brainstorm and came up with the idea for this site! Im excited to be finished with something functional,
+                and a website I know I will actually use myself! <br><br>If you've reached this site from my resume, I sincerely appreciate you taking time out of your day to look 
+                through this. But regardless if you've visited this website from my resume or not, thank you! I hope you find use out of this project. <br><br> If you happen to find any bugs, or just want to chat, I encourage you to reach out on discord! (My username is 5ycm).</p>
+        </div>
+        <script src="mobileDetector.js"></script> 
     </body>
+    
 </html>
