--- a/src/mirage.html
+++ b/src/mirage.html
@@ -77,5 +77,6 @@
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
     <script id="replace_with_videoPlayer" src="vP.js"></script> 
+    <script src="mobileDetector.js"></script> 
 </body>
 </html>
